[project]
name = "csworkshop"
version = "0.0.3"
description = "CS Design Studio"
readme = "README.md"
authors = [
    { name = "Tyler Yep", email = "tyep@cs.stanford.edu" },
]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "bitarray",
    "graphviz",
    "matplotlib",
    "prettyprinter",
    "tqdm",
]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-deadfixtures",
    "pytest-idempotent",
    "pytest-timeout",
    "ruff",
    "types-setuptools",
    "types-tqdm",
]

[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/tyleryep/workshop"

[tool.setuptools]
include-package-data = true
license-files = [
    "LICENSE",
]

[tool.setuptools.package-data]
cs = [
    "py.typed",
]

[tool.setuptools.packages.find]
exclude = [
    "explore",
    "explore.*",
    "utils",
    "tests",
    "tests.*",
    "tests.*.*",
]
namespaces = false

[tool.mypy]
strict = true
warn_unreachable = true
disallow_any_unimported = true
extra_checks = true
enable_error_code = "explicit-override,ignore-without-code"

[[tool.mypy.overrides]]
module = [
    "explore.*",
]
ignore_errors = true

[tool.ruff]
target-version = "py313"
lint.select = ["ALL"]
lint.ignore = [
	"ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
	"C901",    # function is too complex (12 > 10)
	"COM812",  # Trailing comma missing
	"D",       # Docstring rules
	"EM101",   # Exception must not use a string literal, assign to variable first
	"EM102",   # Exception must not use an f-string literal, assign to variable first
	"ERA001",  # Found commented-out code
	"FBT001",  # Boolean positional arg in function definition
	"FBT002",  # Boolean default value in function definition
	"FBT003",  # Boolean positional value in function call
	"FIX002",  # Line contains TODO
	"PLC0415", # `import` should be at the top-level of a file
	"PLR0911", # Too many return statements (11 > 6)
	"PLR2004", # Magic value used in comparison, consider replacing 2 with a constant variable
	"PLR0912", # Too many branches
	"PLR0913", # Too many arguments to function call
	"PLR0915", # Too many statements
	"S101",    # Use of `assert` detected
	"S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
	"T201",    # print() found
	"T203",    # pprint() found
	"TC006",   # Add quotes to type expression in `typing.cast()`
	"TD002",   # Missing author in TODO; try: `# TODO(<author_name>): ...`
	"TD003",   # Missing issue link on the line following this TODO
	"TD005",   # Missing issue description after `TODO`
	"TRY003",  # Avoid specifying long messages outside the exception class

	# Workshop-specific ignores
	"N803",   # Argument name `A_i` should be lowercase
	"N806",   # Variable `G` in function should be lowercase
	"RUF009", # Do not perform function call `dfield` in dataclass defaults
]
exclude = [
	"explore/django_1.0_to_2.0.py",
	"explore/neural_net.py",
	"explore/runner.py",
]
