[metadata]
name = csworkshop
version = 0.0.2
description = CS Design Studio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/workshop
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude = explore, explore.*, utils, tests, tests.*, tests.*.*

[mypy]
strict = True
ignore_missing_imports = True

[mypy-explore.*]
ignore_errors = True

[mypy-utils.*]
ignore_errors = True

[MASTER]
ignore = explore

[pylint.MESSAGES CONTROL]
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    missing-docstring,
    too-many-locals,
    too-many-instance-attributes,
    too-few-public-methods,
    import-outside-toplevel,
    cyclic-import,
    duplicate-code,
    invalid-name,
    fixme,

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
