[metadata]
name = csworkshop
version = 0.0.3
description = CS Design Studio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/workshop
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    bitarray
    prettyprinter
    tqdm

[options.package_data]
cs = py.typed

[options.packages.find]
exclude = explore, explore.*, utils, tests, tests.*, tests.*.*

[mypy]
strict = True
warn_unreachable = True
disallow_any_unimported = True
extra_checks = True
enable_error_code = ignore-without-code
# enable_error_code = explicit-override,ignore-without-code

# Mypy checks that are too strict to enable:
# disallow_any_expr = True
# disallow_any_decorated = True
# disallow_any_explicit = True

[mypy-explore.*]
ignore_errors = True

[mypy-utils.*]
ignore_errors = True

[pylint.main]
ignore = explore

[pylint.MESSAGES CONTROL]
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    line-too-long,  # Covered by flake8
    missing-docstring,
    too-many-locals,
    too-many-instance-attributes,
    too-few-public-methods,
    import-outside-toplevel,
    cyclic-import,
    duplicate-code,
    invalid-name,
    fixme,
fail-on = useless-suppression
